config/prod/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: nginx
  rules:
    - host: atlantis.trading
      http:
        paths:
          - pathType: Prefix
            path: "/private"
            backend:
              service:
                name: backend
                port:
                  number: 5057
          - pathType: Prefix
            path: "/poll"
            backend:
              service:
                name: backend
                port:
                  number: 5057
          - pathType: Prefix
            path: "/public"
            backend:
              service:
                name: backend
                port:
                  number: 5057
          - pathType: Prefix
            path: "/backend"
            backend:
              service:
                name: backend
                port:
                  number: 5057
          - pathType: Prefix
            path: "/ws"
            backend:
              service:
                name: backend
                port:
                  number: 5057
          - pathType: Prefix
            path: "/health"
            backend:
              service:
                name: backend
                port:
                  number: 5057
          - pathType: Prefix
            path: "/backend/health"
            backend:
              service:
                name: backend
                port:
                  number: 5057
          - pathType: Prefix
            path: "/_app"
            backend:
              service:
                name: frontend
                port:
                  number: 3000
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend
                port:
                  number: 3000
